# xfwm4

./: .gitignore  Makefile.am  configure.ac.in
WINGs/: Makefile.am  proplist.c  userdefaults.c  widgets.c
WINGs/WINGs/: WINGs.h
defaults/: defaults
m4/: wm_i18n.m4
settings-dialogs/: tweaks-settings.c  xfwm4-tweaks-dialog.glade
src/: Makefile.am  focus.c  screen.h  settings.c  settings.h  workspaces.c
wrlib/: Makefile.am
